--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,16 +1,21 @@
 <h2>Product-items</h2>
 <div *ngFor="let product of products">
-  <h3>{{ product.name }}</h3>
+  <h3>
+    <a [href]="product.link">{{ product.name }}</a>
+  </h3>
+  <p *ngIf="product.description">Description: {{ product.description }}</p>
+  <img [src]="product.image" width="250px" />
+  <p *ngIf="product.rating">Rating: {{ product.rating }}</p>
+  <button type="button">
+    <a
+      [href]="'https://telegram.me/share/url?url=' + product.link"
+      target="_blank"
+    ></a
+    >Share
+  </button>
 </div>
 <div *ngFor="let product of products"></div>
-<div *ngFor="let product of products"></div>
-<div *ngFor="let product of products"></div>
-<div *ngFor="let product of products"></div>
-<div *ngFor="let product of products"></div>
-<div *ngFor="let product of products"></div>
-<div *ngFor="let product of products"></div>
-<div *ngFor="let product of products"></div>
-<div *ngFor="let product of products"></div>
+
 <!-- 
 Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
